--- a/templates/view_students.html
+++ b/templates/view_students.html
@@ -19,7 +19,10 @@
                     <a class="nav-link" href="/tutor/change_password">Passwort zurücksetzen</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/tutor/view_students">Schüler anzeigen</a>
+                    <a class="nav-link" href="/tutor/view_students">Schüler Übersicht</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/tutor/lessons">Stunden-Übersicht</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/tutor/edit_tutor">Fächer anzeigen</a>
