--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -57,9 +57,12 @@
     </nav>
 
 
-
-    <div class="container">
-        <div id="calendar"></div>
+    <div style="display: flex; margin-top: 20px;">
+        <div style="margin-right: 20px;">
+            <a href="/add_lesson" class="btn btn-success" style="margin-bottom: 10px;">Neue Lektion</a>
+            <a href="/admin/finances" class="btn btn-primary">Finanzen</a>
+        </div>
+        <div id='calendar'></div>
     </div>
 
 
