--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -30,7 +30,16 @@
             </ul>
         </div>
     </nav>
-
+    <!-- Flash messages -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+    {% endwith %}
     <!-- Passwort-Formular -->
     <form action="/tutor/change_password" method="POST">
         <label for="old_password">Altes Passwort:</label>
