--- a/templates/modify_users.html
+++ b/templates/modify_users.html
@@ -19,11 +19,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/modify_lessons">Lektion bearbeiten</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/modify_users">Benutzer bearbeiten</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/modify_users">Benutzer bearbeiten</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/modify_subjects">Fächer bearbeiten</a>
@@ -36,12 +36,13 @@
         </div>
     </nav>
     <div class="container mt-4">
-        <h2>Benutzer</h2>
+        <button class="btn btn-success" onclick="window.location.href='/create_user'" style="position: absolute; left: 40px;">Neuen Nutzer hinzufügen</button>
+        <h2>Nutzer</h2>
         <table class="table">
             <thead>
                 <tr>
-                    <th>Benutzer-ID</th>
-                    <th>Benutzername</th>
+                    <th>Nutzer-ID</th>
+                    <th>Nutzername</th>
                     <th>Rolle</th>
                     <th>Ist Tutor</th>
                     <th>Bearbeiten</th> <!-- Neue Spalte für Bearbeiten-Button hinzufügen -->
@@ -59,7 +60,6 @@
                 {% endfor %}
             </tbody>
         </table>
-        <button class="btn btn-primary" onclick="window.location.href='/create_user'">Neuen Benutzer hinzufügen</button>
     </div>
 
 
