--- a/templates/modify_lessons.html
+++ b/templates/modify_lessons.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Benutzer erstellen</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Include DataTables -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -49,9 +53,9 @@
             <div class="form-group">
                 <label for="tutor_id">Tutor</label>
                 <select class="form-control" id="tutor_id" name="tutor_id">
-                    <option value="">All Tutors</option>
+                    <option value="">Alle Tutoren</option>
                     {% for tutor in tutors %}
-                        <option value="{{ tutor.id }}" {% if selected_tutor == tutor.id %} selected {% endif %}>{{ tutor.name }}</option>
+                        <option value="{{ tutor.tutor_id }}" {% if selected_tutor == tutor.tutor_id %} selected {% endif %}>{{ tutor.name }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -60,25 +64,40 @@
             <div class="form-group">
                 <label for="student_id">Student</label>
                 <select class="form-control" id="student_id" name="student_id">
-                    <option value="">All Students</option>
+                    <option value="">Alle Lernenden</option>
                     {% for student in students %}
-                        <option value="{{ student.id }}" {% if selected_student == student.id %} selected {% endif %}>{{ student.FirstName }} {{ student.LastName }}</option>
+                        <option value="{{ student.StudentID }}" {% if selected_student == student.StudentID %} selected {% endif %}>{{ student.FirstName }} {{ student.LastName }}</option>
                     {% endfor %}
                 </select>
             </div>
+            <br>
             <button type="submit">Filter anwenden</button>
         </form>
     </div>
     <!-- Lessons Table -->
     <div class="container mt-4">
-        <h2>Lektionen bearbeiten</h2>
+        <h2>Lektionen Übersicht</h2>
+        <br>
         <a href="{{ url_for('add_lesson') }}" class="btn btn-primary mb-3">Lektion hinzufügen</a>
+        <br>
+        <br>
         <table class="table" id="lessons-table">
             <!-- Table headers -->
+            <thead>
+                <tr>
+                    <th>Datum</th>
+                    <th>Startzeit</th>
+                    <th>Endzeit</th>
+                    <th>Tutor Name</th>
+                    <th>Schüler Name</th>
+                    <th>Fach Name</th>
+                    <th>Bearbeiten</th>
+                </tr>
+            </thead>
             <tbody>
                 {% for lesson in lessons %}
                 <tr>
-                    <td>{{ lesson.date }}</td>
+                    <td>{{ lesson.date|formatdate }}</td>
                     <td>{{ lesson.start_time }}</td>
                     <td>{{ lesson.end_time }}</td>
                     <td>{{ lesson.tutor_name }}</td>
@@ -86,12 +105,24 @@
                     <td>{{ lesson.subject_name }}</td>
                     <td>
                         <a href="{{ url_for('lesson_detail', lesson_id=lesson.lesson_id) }}" class="btn btn-primary btn-sm">Bearbeiten</a>
-                        <a href="/delete_lesson/{{ lesson.lesson_id }}" class="btn btn-danger btn-sm">Löschen</a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
+    <script>
+    $(document).ready( function () {
+        $('#lessons-table').DataTable({
+            "order": [[ 0, "asc" ]], // Sort by the first column (0-indexed) in descending order
+            "columnDefs": [
+                { "orderable": false, "targets": 6 } // Disable sorting on the 7th column (0-indexed)
+            ],
+            "language": {
+                "url": "//cdn.datatables.net/plug-ins/1.10.22/i18n/German.json"
+            }
+        });
+    } );
+    </script>
 </body>
 </html>
